--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -30,9 +30,9 @@ $foundation-version: "1.0.3";
 "components/accordion",
 "components/typography",
 "components/utilities",
-"ladda",
-"nouislider",
-"icons",
-"pickaday",
-"flippanel",
+"components/ladda",
+"components/nouislider",
+"components/icons",
+"components/pickaday",
+"components/flippanel",
 "tornadofaces";
