--- a/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
+++ b/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
@@ -9,50 +9,45 @@
 
 // ?. Box
 // - - - - - - - - - - - - - - -
-.box {
-  @extend .boxed;
-  background: #fff;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-
-  border: none;
-
-  &> .subheader {
-    line-height: 1;
-    font-size: 26px;
-    border-bottom: 1px solid #f4f4f1;
-    padding: 22px 20px;
-    margin: 0;
-
-    i {
-      color: #3fa2d8;
-      margin-right: 15px;
-      float: left;
-      line-height: inherit;
-      display: block;
-      font-size: 30px;
-    }
-  }
-
-  &> div {
-//    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #616161;
-    padding: 20px;
-
-  }
-
-  p {
-    margin-bottom: 0.7rem;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-  .tab-content {
-    padding: 0;
-  }
-}
+//.box {
+//  @extend .boxed;
+//  background: #fff;
+//  display: flex;
+//  flex-direction: column;
+//  flex: 1;
+//
+//  border: none;
+//
+//  &> .subheader {
+//    line-height: 1;
+//    font-size: 26px;
+//    border-bottom: 1px solid #f4f4f1;
+//    padding: 22px 20px;
+//    margin: 0;
+//
+//    i {
+//      color: #3fa2d8;
+//      margin-right: 15px;
+//      float: left;
+//      line-height: inherit;
+//      display: block;
+//      font-size: 30px;
+//    }
+//  }
+//  &> div {
+//    color: #616161;
+//    padding: 20px;
+//  }
+//  p {
+//    margin-bottom: 0.7rem;
+//    &:last-child {
+//      margin-bottom: 0;
+//    }
+//  }
+//  .tab-content {
+//    padding: 0;
+//  }
+//}
 
 #left-menu-container {
   min-width: 220px;
@@ -197,8 +192,7 @@
 
 @include breakpoint(small) {
   #main-container {
-    padding: 0 !important;
-    padding-right: calc(100% - 1200px) !important;
+
   }
 
   .menu-group > .menu-group-left {
