--- a/tornadofaces/src/themes/tornado/scss/components/_button-group.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_button-group.scss
@@ -1,11 +1,3 @@
-/// @Foundation.settings
-// Button Group
-$btngroup-background: $primary-color !default;
-$btngroup-color: #fff !default;
-$btngroup-radius: $button-radius !default;
-///
-
-$child-selectors: '> a, > label, > button';
 
 %button-group {
   margin: 0;
@@ -20,7 +12,7 @@ $child-selectors: '> a, > label, > button';
     flex: 0 0 auto;
 
     // Links become buttons
-    #{$child-selectors} {
+    #{$btngroup-child-selectors} {
       @extend %button;
       border-radius: 0;
       font-size: inherit;
@@ -32,7 +24,7 @@ $child-selectors: '> a, > label, > button';
     }
     // Add borders between items
     &:not(:last-child) {
-      #{$child-selectors} {
+      #{$btngroup-child-selectors} {
         border-right: 1px solid scale-color($btngroup-background, $lightness: -25%);
       }
     }
@@ -60,7 +52,7 @@ $child-selectors: '> a, > label, > button';
       left: -9999px;
     }
     // This is the button
-    #{$child-selectors} {
+    #{$btngroup-child-selectors} {
       margin-right: 0;
       background: transparent;
     }
@@ -81,7 +73,7 @@ $child-selectors: '> a, > label, > button';
   > li {
     flex: if($stretch, 1, 0 0 auto);
 
-    #{$child-selectors} {
+    #{$btngroup-child-selectors} {
       @if $stretch { @include button-expand; }
     }
   }
@@ -94,12 +86,12 @@ $child-selectors: '> a, > label, > button';
 
   @if not($segmented) {
     > li {
-      #{$child-selectors} {
+      #{$btngroup-child-selectors} {
         @include button-style($background, $color);
         border-color: scale-color($background, $lightness: -15%);
       }
       &.is-active {
-        #{$child-selectors} {
+        #{$btngroup-child-selectors} {
           background: scale-color($background, $lightness: -15%);
         }
       }
@@ -112,7 +104,7 @@ $child-selectors: '> a, > label, > button';
 
     > li {
       // This is the button
-      #{$child-selectors} {
+      #{$btngroup-child-selectors} {
         border-color: $background;
         color: $background;
 
@@ -167,10 +159,10 @@ $child-selectors: '> a, > label, > button';
 
     // Individual colors
     > li {
-      &.secondary { #{$child-selectors} { @include button-style($secondary-color, $btngroup: true); } }
-      &.success   { #{$child-selectors} { @include button-style($success-color, $btngroup: true); } }
-      &.warning   { #{$child-selectors} { @include button-style($warning-color, $btngroup: true); } }
-      &.alert     { #{$child-selectors} { @include button-style($alert-color, $btngroup: true); } }
+      &.secondary { #{$btngroup-child-selectors} { @include button-style($secondary-color, $btngroup: true); } }
+      &.success   { #{$btngroup-child-selectors} { @include button-style($success-color, $btngroup: true); } }
+      &.warning   { #{$btngroup-child-selectors} { @include button-style($warning-color, $btngroup: true); } }
+      &.alert     { #{$btngroup-child-selectors} { @include button-style($alert-color, $btngroup: true); } }
     }
 
     // Segmented
@@ -189,7 +181,7 @@ $child-selectors: '> a, > label, > button';
 
     // Disabled
     li.disabled {
-      #{$child-selectors} {
+      #{$btngroup-child-selectors} {
         @include button-disabled;
       }
     }
