Added Colorpicker component based on Spectrum

--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -35,4 +35,5 @@ $foundation-version: "1.0.3";
 "components/icons",
 "components/pickaday",
 "components/flippanel",
+"components/colorpicker",
 "tornadofaces";
