Extension args parsing IE fix

--- a/tornadofaces/src/themes/tornado/scss/components/icons.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/icons.scss
@@ -1,8 +1,7 @@
 @font-face {
   font-family: 'icomoon';
   src: url("icomoon.eot.xhtml?ln=tornadofaces-tornado");
-  src: url("icomoon.eot.xhtml?ln-tornadofaces-tornado&#iefixtwv9ni'") format("embedded-opentype"),
-  url("icomoon.woff.xhtml?ln=tornadofaces-tornado") format("woff"),
+  src: url("icomoon.woff.xhtml?ln=tornadofaces-tornado") format("woff"),
   url("icomoon.ttf.xhtml?ln=tornadofaces-tornado") format("truetype"),
   url("icomoon.svg.xhtml?ln=tornadofaces-tornado") format('svg');
   font-weight: normal;
