--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -6360,7 +6360,7 @@ blockquote p {
 @font-face {
   font-family: 'icomoon';
   src: url("icomoon.eot.xhtml?ln=tornadofaces-tornado");
-  src: url("icomoon.eot.xhtml?ln-tornadofaces-tornado&#iefixtwv9ni'") format("embedded-opentype"), url("icomoon.woff.xhtml?ln=tornadofaces-tornado") format("woff"), url("icomoon.ttf.xhtml?ln=tornadofaces-tornado") format("truetype"), url("icomoon.svg.xhtml?ln=tornadofaces-tornado") format("svg");
+  src: url("icomoon.woff.xhtml?ln=tornadofaces-tornado") format("woff"), url("icomoon.ttf.xhtml?ln=tornadofaces-tornado") format("truetype"), url("icomoon.svg.xhtml?ln=tornadofaces-tornado") format("svg");
   font-weight: normal;
   font-style: normal; }
 [class^="icon-"], [class*=" icon-"] {
@@ -6976,14 +6976,18 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .flip-panel {
   -webkit-perspective: 1000;
-          perspective: 1000; }
+          perspective: 1000;
+  position: relative;
+  padding: 0;
+  margin-bottom: 2rem; }
   .flip-panel .flip-content {
     position: relative;
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d; }
   .flip-panel .front, .flip-panel .back {
     padding: 1rem;
-    border: 1px solid #cecece; }
+    border: 1px solid #eee;
+    border-radius: 4px; }
   .flip-panel .back {
     display: none; }
   .flip-panel.flipped .front {
@@ -7071,7 +7075,7 @@ License: MIT
   width: 6px;
   left: 50%;
   cursor: pointer;
-  border: 1px solid black;
+  border: 1px solid #eee;
   background: white;
   opacity: .8; }
 
@@ -7222,8 +7226,8 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 */
 .sp-container {
   border-radius: 0;
-  background-color: #ECECEC;
-  border: solid 1px #f0c49B;
+  background-color: #fff;
+  border: solid 1px #3fa2d8;
   padding: 0; }
 
 .sp-container, .sp-container button, .sp-container input, .sp-color, .sp-hue, .sp-clear {
@@ -7257,10 +7261,10 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   color: #222; }
 
 .sp-input:focus {
-  border: 1px solid orange; }
+  border: 1px solid #3fa2d8; }
 
 .sp-input.sp-validation-error {
-  border: 1px solid red;
+  border: 1px solid #E46E5B;
   background: #fdd; }
 
 .sp-picker-container, .sp-palette-container {
@@ -7292,7 +7296,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   border: solid 2px transparent; }
 
 .sp-palette .sp-thumb-el:hover, .sp-palette .sp-thumb-el.sp-thumb-active {
-  border-color: orange; }
+  border-color: #3fa2d8; }
 
 .sp-thumb-el {
   position: relative; }
@@ -7333,7 +7337,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   vertical-align: middle; }
 
 .sp-replacer:hover, .sp-replacer.sp-active {
-  border-color: #F0C49B;
+  border-color: #3fa2d8;
   color: #111; }
 
 .sp-replacer.sp-disabled {
@@ -7372,37 +7376,12 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 
 /* Buttons: http://hellohappy.org/css3-buttons/ */
 .sp-container button {
-  background-color: #eeeeee;
-  background-image: linear-gradient(to bottom, #eeeeee, #cccccc);
-  border: 1px solid #ccc;
-  border-bottom: 1px solid #bbb;
-  border-radius: 3px;
-  color: #333;
-  font-size: 14px;
-  line-height: 1;
-  padding: 5px 4px;
-  text-align: center;
-  text-shadow: 0 1px 0 #eee;
-  vertical-align: middle; }
-
-.sp-container button:hover {
-  background-color: #dddddd;
-  background-image: linear-gradient(to bottom, #dddddd, #bbbbbb);
-  border: 1px solid #bbb;
-  border-bottom: 1px solid #999;
-  cursor: pointer;
-  text-shadow: 0 1px 0 #ddd; }
-
-.sp-container button:active {
-  border: 1px solid #aaa;
-  border-bottom: 1px solid #888;
-  -ms-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-  -o-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-  box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee; }
+  padding: 4px;
+  margin-top: 4px; }
 
 .sp-cancel {
   font-size: 11px;
-  color: #d93f3f !important;
+  color: #9B9B87 !important;
   margin: 0;
   padding: 2px;
   margin-right: 5px;
@@ -7410,7 +7389,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   text-decoration: none; }
 
 .sp-cancel:hover {
-  color: #d93f3f !important;
+  color: #9B9B87 !important;
   text-decoration: underline; }
 
 .sp-palette span:hover, .sp-palette span.sp-thumb-active {
