--- a/tornadofaces/src/themes/tornado/scss/components/_colorpicker.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_colorpicker.scss
@@ -86,7 +86,7 @@ License: MIT
   width: 6px;
   left: 50%;
   cursor: pointer;
-  border: 1px solid black;
+  border: 1px solid #eee;
   background: white;
   opacity: .8;
 }
@@ -255,8 +255,8 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 
 .sp-container {
   border-radius: 0;
-  background-color: #ECECEC;
-  border: solid 1px #f0c49B;
+  background-color: #fff;
+  border: solid 1px $primary-color;
   padding: 0;
 }
 .sp-container, .sp-container button, .sp-container input, .sp-color, .sp-hue, .sp-clear {
@@ -293,10 +293,10 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   color: #222;
 }
 .sp-input:focus  {
-  border: 1px solid orange;
+  border: 1px solid $primary-color;
 }
 .sp-input.sp-validation-error {
-  border: 1px solid red;
+  border: 1px solid $alert-color;
   background: #fdd;
 }
 .sp-picker-container , .sp-palette-container {
@@ -331,7 +331,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   border:solid 2px transparent;
 }
 .sp-palette .sp-thumb-el:hover, .sp-palette .sp-thumb-el.sp-thumb-active {
-  border-color: orange;
+  border-color: $primary-color;
 }
 .sp-thumb-el {
   position:relative;
@@ -376,7 +376,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   vertical-align: middle;
 }
 .sp-replacer:hover, .sp-replacer.sp-active {
-  border-color: #F0C49B;
+  border-color: $primary-color;
   color: #111;
 }
 .sp-replacer.sp-disabled {
@@ -415,51 +415,52 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 .sp-container {
   padding-bottom:0;
 }
-
-
 /* Buttons: http://hellohappy.org/css3-buttons/ */
 .sp-container button {
-  background-color: #eeeeee;
-  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: linear-gradient(to bottom, #eeeeee, #cccccc);
-  border: 1px solid #ccc;
-  border-bottom: 1px solid #bbb;
-  border-radius: 3px;
-  color: #333;
-  font-size: 14px;
-  line-height: 1;
-  padding: 5px 4px;
-  text-align: center;
-  text-shadow: 0 1px 0 #eee;
-  vertical-align: middle;
+  padding: 4px;
+  margin-top: 4px;
 }
-.sp-container button:hover {
-  background-color: #dddddd;
-  background-image: -webkit-linear-gradient(top, #dddddd, #bbbbbb);
-  background-image: -moz-linear-gradient(top, #dddddd, #bbbbbb);
-  background-image: -ms-linear-gradient(top, #dddddd, #bbbbbb);
-  background-image: -o-linear-gradient(top, #dddddd, #bbbbbb);
-  background-image: linear-gradient(to bottom, #dddddd, #bbbbbb);
-  border: 1px solid #bbb;
-  border-bottom: 1px solid #999;
-  cursor: pointer;
-  text-shadow: 0 1px 0 #ddd;
-}
-.sp-container button:active {
-  border: 1px solid #aaa;
-  border-bottom: 1px solid #888;
-  -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-  -moz-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-  -ms-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-  -o-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-  box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-}
+//  background-color: #eeeeee;
+//  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+//  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+//  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+//  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
+//  background-image: linear-gradient(to bottom, #eeeeee, #cccccc);
+//  border: 1px solid #ccc;
+//  border-bottom: 1px solid #bbb;
+//  border-radius: 3px;
+//  color: #333;
+//  font-size: 14px;
+//  line-height: 1;
+//  padding: 5px 4px;
+//  text-align: center;
+//  text-shadow: 0 1px 0 #eee;
+//  vertical-align: middle;
+//}
+//.sp-container button:hover {
+//  background-color: #dddddd;
+//  background-image: -webkit-linear-gradient(top, #dddddd, #bbbbbb);
+//  background-image: -moz-linear-gradient(top, #dddddd, #bbbbbb);
+//  background-image: -ms-linear-gradient(top, #dddddd, #bbbbbb);
+//  background-image: -o-linear-gradient(top, #dddddd, #bbbbbb);
+//  background-image: linear-gradient(to bottom, #dddddd, #bbbbbb);
+//  border: 1px solid #bbb;
+//  border-bottom: 1px solid #999;
+//  cursor: pointer;
+//  text-shadow: 0 1px 0 #ddd;
+//}
+//.sp-container button:active {
+//  border: 1px solid #aaa;
+//  border-bottom: 1px solid #888;
+//  -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
+//  -moz-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
+//  -ms-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
+//  -o-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
+//  box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
+//}
 .sp-cancel {
   font-size: 11px;
-  color: #d93f3f !important;
+  color: $warning-color !important;
   margin:0;
   padding:2px;
   margin-right: 5px;
@@ -468,7 +469,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 
 }
 .sp-cancel:hover {
-  color: #d93f3f !important;
+  color: $warning-color !important;
   text-decoration: underline;
 }
 
