--- a/tornadofaces/src/themes/tornado/scss/_settings.scss
+++ b/tornadofaces/src/themes/tornado/scss/_settings.scss
@@ -150,7 +150,7 @@ $header-bottom-margin: .5rem;
 $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-$h1-font-size: rem-calc(44);
+$h1-font-size: 2.6rem;
 $h2-font-size: rem-calc(37);
 $h3-font-size: rem-calc(27);
 $h4-font-size: rem-calc(23);
@@ -167,10 +167,11 @@ $h6-font-reduction: 0;
 
 // These control how subheaders are styled.
 $subheader-line-height: 1.4;
-$subheader-font-color: scale-color($header-font-color, $lightness: 35%);
+$subheader-font-color: #212121;
 $subheader-font-weight: $font-weight-normal;
 $subheader-top-margin: .2rem;
-$subheader-bottom-margin: .5rem;
+$subheader-bottom-margin: 1rem;
+$subheader-text-transform: uppercase;
 
 // A general <small> styling
 $small-font-size: 60%;
