--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -35,5 +35,6 @@ $foundation-version: "1.0.3";
 "components/icons",
 "components/pickaday",
 "components/flippanel",
+"components/sidemenu",
 "components/colorpicker",
 "tornadofaces";
