--- a/tornadofaces/src/themes/tornado/scss/components/_action-sheet.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_action-sheet.scss
@@ -244,4 +244,22 @@
       );
     }
   }
+
+  .action-sheet-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    display: none;
+    background-color: transparent;
+    align-items: center;
+    justify-content: center;
+
+    &.is-active {
+      display: flex;
+    }
+  }
+
 }
