Added menu items, started work on Context Menu component

--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -37,4 +37,5 @@ $foundation-version: "1.0.3";
 "components/flippanel",
 "components/sidemenu",
 "components/colorpicker",
+"components/contextmenu",
 "tornadofaces";
