--- a/tornadofaces/src/themes/tornado/scss/components/icons.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/icons.scss
@@ -8,7 +8,7 @@
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: 'icomoon';
   speak: none;
   font-style: normal;
